fixing alignment 1

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 body {
-	text-align: center;
 	background-color:#FFFFFF;
 	color: #000;
 	font-family: Helvetica, sans-serif;
